syntax = "proto3";
package v1;

option go_package = "github.com/sbulman/pkg/api/v1";

import "google/protobuf/timestamp.proto";

message ToDo {
  int64 id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp reminder = 4;
}

message CreateRequest { ToDo todo = 1; }
message CreateResponse { int64 id = 1; }

message ReadRequest { int64 id = 1; }
message ReadResponse { ToDo todo = 1; }

message UpdateRequest { ToDo todo = 1; }
message UpdateResponse { int64 updated = 1; }

message DeleteRequest { int64 id = 1; }
message DeleteResponse { int64 deleted = 1; }

message ReadAllRequest {}
message ReadAllResponse { repeated ToDo todos = 1; }

service ToDoService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Read(ReadRequest) returns (ReadResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc ReadAll(ReadAllRequest) returns (ReadAllResponse);
}